--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="descricaoAp02">Descrição do apartamento duplo aqui se encontrará
         logo em instantes, a medida que as coisas vão evoluindo,
         tenho fé que chegará o momento de apreciarmos tal texto.</string>
+    <string name="descricaoBottom">R. Carlos Antão Pereira Lima, 48 - Forno da Cal, Ilha de Itamaracá, Pernambuco, Brasil</string>
+    <string name="descricaoBottom02">Telefone: (81)9926.0577</string>
+
     <string name="message01">Exemplo de mensagem</string>
     <string name="ok">Buscar</string>
     <string name="cancel">Cancelar</string>
